@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: October 30, 2009</p>
+      <p>Last Updated: November 5, 2009</p>
     </td>
   </tr>
 </table>
@@ -1595,6 +1595,10 @@ buildroot-0.1.7 2009-06-26 &lt;spudmonkey@racsa.co.cr&gt;
 
 <ul><pre>
 nuttx-0.4.14 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
+
+	* arch/arm/src/stm32/stm32_gpio.c - Add support for configure an input GPIO
+	  to generate an EXTI interrupt.
+	* config/stm3210e-eval/src/up_buttons.c - Add support for on-board buttons.
 
 pascal-0.1.3 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
